{
  "version": 4,
  "terraform_version": "1.6.6",
  "serial": 690,
  "lineage": "a1243052-e713-2cac-93a4-52235bcee2e6",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "testburk",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0014ce3e52359afbd",
            "arn": "arn:aws:ec2:eu-north-1:873387250536:instance/i-0df5f53a359545f74",
            "associate_public_ip_address": true,
            "availability_zone": "eu-north-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "Gurkburk-test-testburk_profile",
            "id": "i-0df5f53a359545f74",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-00093b6961f0cb32d",
            "private_dns": "ip-10-13-37-21.eu-north-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.13.37.21",
            "public_dns": "ec2-16-16-26-222.eu-north-1.compute.amazonaws.com",
            "public_ip": "16.16.26.222",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-00cbe6c1a6a5567fb",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0e7bb8e35833f3660",
            "tags": {
              "Name": "Gurkburk-test-server-0"
            },
            "tags_all": {
              "Name": "Gurkburk-test-server-0"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0ddb341f76203f51c"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.testburk_profile",
            "aws_iam_role.allow_s3",
            "aws_iam_role_policy.allow_s3_all",
            "aws_s3_bucket.web_bucket",
            "aws_security_group.SG-testburk",
            "aws_subnet.subnets",
            "aws_vpc.VPC-1",
            "data.aws_availability_zones.available",
            "random_integer.s3"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0014ce3e52359afbd",
            "arn": "arn:aws:ec2:eu-north-1:873387250536:instance/i-0ab04b5a2f44ffa79",
            "associate_public_ip_address": true,
            "availability_zone": "eu-north-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "Gurkburk-test-testburk_profile",
            "id": "i-0ab04b5a2f44ffa79",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-06325beb7c5bd824f",
            "private_dns": "ip-10-13-37-49.eu-north-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.13.37.49",
            "public_dns": "ec2-16-171-13-25.eu-north-1.compute.amazonaws.com",
            "public_ip": "16.171.13.25",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0317445c8bb43b3b6",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-05a8cb72eafdbe327",
            "tags": {
              "Name": "Gurkburk-test-server-1"
            },
            "tags_all": {
              "Name": "Gurkburk-test-server-1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0ddb341f76203f51c"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.testburk_profile",
            "aws_iam_role.allow_s3",
            "aws_iam_role_policy.allow_s3_all",
            "aws_s3_bucket.web_bucket",
            "aws_security_group.SG-testburk",
            "aws_subnet.subnets",
            "aws_vpc.VPC-1",
            "data.aws_availability_zones.available",
            "random_integer.s3"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0014ce3e52359afbd",
            "arn": "arn:aws:ec2:eu-north-1:873387250536:instance/i-02082bcf00054597b",
            "associate_public_ip_address": true,
            "availability_zone": "eu-north-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "Gurkburk-test-testburk_profile",
            "id": "i-02082bcf00054597b",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0bab86e10e0e60b0e",
            "private_dns": "ip-10-13-37-17.eu-north-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.13.37.17",
            "public_dns": "ec2-13-53-216-205.eu-north-1.compute.amazonaws.com",
            "public_ip": "13.53.216.205",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-078a8bc1f74438839",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0e7bb8e35833f3660",
            "tags": {
              "Name": "Gurkburk-test-server-2"
            },
            "tags_all": {
              "Name": "Gurkburk-test-server-2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0ddb341f76203f51c"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.testburk_profile",
            "aws_iam_role.allow_s3",
            "aws_iam_role_policy.allow_s3_all",
            "aws_s3_bucket.web_bucket",
            "aws_security_group.SG-testburk",
            "aws_subnet.subnets",
            "aws_vpc.VPC-1",
            "data.aws_availability_zones.available",
            "random_integer.s3"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0014ce3e52359afbd",
            "arn": "arn:aws:ec2:eu-north-1:873387250536:instance/i-000895611b5d89309",
            "associate_public_ip_address": true,
            "availability_zone": "eu-north-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "Gurkburk-test-testburk_profile",
            "id": "i-000895611b5d89309",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-03f9bb08648f49bad",
            "private_dns": "ip-10-13-37-56.eu-north-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.13.37.56",
            "public_dns": "ec2-16-171-226-211.eu-north-1.compute.amazonaws.com",
            "public_ip": "16.171.226.211",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-01412741965a8682b",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-05a8cb72eafdbe327",
            "tags": {
              "Name": "Gurkburk-test-server-3"
            },
            "tags_all": {
              "Name": "Gurkburk-test-server-3"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0ddb341f76203f51c"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.testburk_profile",
            "aws_iam_role.allow_s3",
            "aws_iam_role_policy.allow_s3_all",
            "aws_s3_bucket.web_bucket",
            "aws_security_group.SG-testburk",
            "aws_subnet.subnets",
            "aws_vpc.VPC-1",
            "data.aws_availability_zones.available",
            "random_integer.s3"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "AIG-VPC-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:873387250536:internet-gateway/igw-0ae62480d7133ace0",
            "id": "igw-0ae62480d7133ace0",
            "owner_id": "873387250536",
            "tags": {
              "Name": "Gurkburk-test-AIG"
            },
            "tags_all": {
              "Name": "Gurkburk-test-AIG"
            },
            "vpc_id": "vpc-00aea692a62c75842"
          },
          "dependencies": [
            "aws_vpc.VPC-1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "testburk-lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-north-1:873387250536:loadbalancer/app/Gurkburk-test-lb/c52e3ac04a124e7d",
            "arn_suffix": "app/Gurkburk-test-lb/c52e3ac04a124e7d",
            "desync_mitigation_mode": "defensive",
            "dns_name": "Gurkburk-test-lb-348878129.eu-north-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:eu-north-1:873387250536:loadbalancer/app/Gurkburk-test-lb/c52e3ac04a124e7d",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "Gurkburk-test-lb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0e60eaf8bb5100f08"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-05a8cb72eafdbe327"
              },
              {
                "subnet_id": "subnet-0e7bb8e35833f3660"
              }
            ],
            "subnets": [
              "subnet-05a8cb72eafdbe327",
              "subnet-0e7bb8e35833f3660"
            ],
            "vpc_id": "vpc-00aea692a62c75842",
            "xff_header_processing_mode": "append",
            "zone_id": "Z23TAZ6LKFMNIO"
          },
          "dependencies": [
            "aws_security_group.SG-LB",
            "aws_subnet.subnets",
            "aws_vpc.VPC-1",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "testburk-listen",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-north-1:873387250536:listener/app/Gurkburk-test-lb/c52e3ac04a124e7d/7ac80ea6d505d19b",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-north-1:873387250536:targetgroup/Gurkburk-test-lbtg/8786de131409381c",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-north-1:873387250536:listener/app/Gurkburk-test-lb/c52e3ac04a124e7d/7ac80ea6d505d19b",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-north-1:873387250536:loadbalancer/app/Gurkburk-test-lb/c52e3ac04a124e7d",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.testburk-lb",
            "aws_lb_target_group.testburk-lbtg",
            "aws_security_group.SG-LB",
            "aws_subnet.subnets",
            "aws_vpc.VPC-1",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "testburk-lbtg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-north-1:873387250536:targetgroup/Gurkburk-test-lbtg/8786de131409381c",
            "arn_suffix": "targetgroup/Gurkburk-test-lbtg/8786de131409381c",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-north-1:873387250536:targetgroup/Gurkburk-test-lbtg/8786de131409381c",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "Gurkburk-test-lbtg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-00aea692a62c75842"
          },
          "dependencies": [
            "aws_vpc.VPC-1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "testburk-tga",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-north-1:873387250536:targetgroup/Gurkburk-test-lbtg/8786de131409381c-20240105071201305300000003",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-north-1:873387250536:targetgroup/Gurkburk-test-lbtg/8786de131409381c",
            "target_id": "i-0df5f53a359545f74"
          },
          "dependencies": [
            "aws_iam_instance_profile.testburk_profile",
            "aws_iam_role.allow_s3",
            "aws_iam_role_policy.allow_s3_all",
            "aws_instance.testburk",
            "aws_lb_target_group.testburk-lbtg",
            "aws_s3_bucket.web_bucket",
            "aws_security_group.SG-testburk",
            "aws_subnet.subnets",
            "aws_vpc.VPC-1",
            "data.aws_availability_zones.available",
            "random_integer.s3"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-north-1:873387250536:targetgroup/Gurkburk-test-lbtg/8786de131409381c-20240105071201351000000004",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-north-1:873387250536:targetgroup/Gurkburk-test-lbtg/8786de131409381c",
            "target_id": "i-0ab04b5a2f44ffa79"
          },
          "dependencies": [
            "aws_iam_instance_profile.testburk_profile",
            "aws_iam_role.allow_s3",
            "aws_iam_role_policy.allow_s3_all",
            "aws_instance.testburk",
            "aws_lb_target_group.testburk-lbtg",
            "aws_s3_bucket.web_bucket",
            "aws_security_group.SG-testburk",
            "aws_subnet.subnets",
            "aws_vpc.VPC-1",
            "data.aws_availability_zones.available",
            "random_integer.s3"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-north-1:873387250536:targetgroup/Gurkburk-test-lbtg/8786de131409381c-20240105071657166700000004",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-north-1:873387250536:targetgroup/Gurkburk-test-lbtg/8786de131409381c",
            "target_id": "i-02082bcf00054597b"
          },
          "dependencies": [
            "aws_iam_instance_profile.testburk_profile",
            "aws_iam_role.allow_s3",
            "aws_iam_role_policy.allow_s3_all",
            "aws_instance.testburk",
            "aws_lb_target_group.testburk-lbtg",
            "aws_s3_bucket.web_bucket",
            "aws_security_group.SG-testburk",
            "aws_subnet.subnets",
            "aws_vpc.VPC-1",
            "data.aws_availability_zones.available",
            "random_integer.s3"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-north-1:873387250536:targetgroup/Gurkburk-test-lbtg/8786de131409381c-20240105071657074900000003",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-north-1:873387250536:targetgroup/Gurkburk-test-lbtg/8786de131409381c",
            "target_id": "i-000895611b5d89309"
          },
          "dependencies": [
            "aws_iam_instance_profile.testburk_profile",
            "aws_iam_role.allow_s3",
            "aws_iam_role_policy.allow_s3_all",
            "aws_instance.testburk",
            "aws_lb_target_group.testburk-lbtg",
            "aws_s3_bucket.web_bucket",
            "aws_security_group.SG-testburk",
            "aws_subnet.subnets",
            "aws_vpc.VPC-1",
            "data.aws_availability_zones.available",
            "random_integer.s3"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "RT-VPC-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:873387250536:route-table/rtb-0a07f2112dd977a4d",
            "id": "rtb-0a07f2112dd977a4d",
            "owner_id": "873387250536",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0ae62480d7133ace0",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Gurkburk-test-RT"
            },
            "tags_all": {
              "Name": "Gurkburk-test-RT"
            },
            "timeouts": null,
            "vpc_id": "vpc-00aea692a62c75842"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.AIG-VPC-1",
            "aws_vpc.VPC-1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "RTA-VPC-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07fd5f6f5bd53adfc",
            "route_table_id": "rtb-0a07f2112dd977a4d",
            "subnet_id": "subnet-0e7bb8e35833f3660"
          },
          "dependencies": [
            "aws_internet_gateway.AIG-VPC-1",
            "aws_route_table.RT-VPC-1",
            "aws_subnet.subnets",
            "aws_vpc.VPC-1",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e514d239c35f450f",
            "route_table_id": "rtb-0a07f2112dd977a4d",
            "subnet_id": "subnet-05a8cb72eafdbe327"
          },
          "dependencies": [
            "aws_internet_gateway.AIG-VPC-1",
            "aws_route_table.RT-VPC-1",
            "aws_subnet.subnets",
            "aws_vpc.VPC-1",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "SG-LB",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:873387250536:security-group/sg-0e60eaf8bb5100f08",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e60eaf8bb5100f08",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "SG-LB",
            "name_prefix": "",
            "owner_id": "873387250536",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-00aea692a62c75842"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.VPC-1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "SG-testburk",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:873387250536:security-group/sg-0ddb341f76203f51c",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ddb341f76203f51c",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "SG-testburk",
            "name_prefix": "",
            "owner_id": "873387250536",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-00aea692a62c75842"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.VPC-1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:873387250536:subnet/subnet-0e7bb8e35833f3660",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1a",
            "availability_zone_id": "eun1-az1",
            "cidr_block": "10.13.37.0/27",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e7bb8e35833f3660",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "873387250536",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Gurkburk-test-subnet-0"
            },
            "tags_all": {
              "Name": "Gurkburk-test-subnet-0"
            },
            "vpc_id": "vpc-00aea692a62c75842"
          },
          "dependencies": [
            "aws_vpc.VPC-1",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:873387250536:subnet/subnet-05a8cb72eafdbe327",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1b",
            "availability_zone_id": "eun1-az2",
            "cidr_block": "10.13.37.32/27",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05a8cb72eafdbe327",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "873387250536",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Gurkburk-test-subnet-1"
            },
            "tags_all": {
              "Name": "Gurkburk-test-subnet-1"
            },
            "vpc_id": "vpc-00aea692a62c75842"
          },
          "dependencies": [
            "aws_vpc.VPC-1",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "VPC-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:873387250536:vpc/vpc-00aea692a62c75842",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.13.37.0/24",
            "default_network_acl_id": "acl-0ed34b2d15481343c",
            "default_route_table_id": "rtb-0c53edd2dc51fad61",
            "default_security_group_id": "sg-0c5ea3d9b52fba2ba",
            "dhcp_options_id": "dopt-05d635c065e9c52a3",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-00aea692a62c75842",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0c53edd2dc51fad61",
            "owner_id": "873387250536",
            "tags": {
              "Name": "Gurkburk-test-VPC"
            },
            "tags_all": {
              "Name": "Gurkburk-test-VPC"
            }
          }
        }
      ]
    }
  ]
}